--- a/FoodFast/composer.json
+++ b/FoodFast/composer.json
@@ -35,7 +35,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "twig/twig": "^1.0||^2.0"
     },
     "scripts": {
         "symfony-scripts": [
