--- a/FoodFast/app/config/routing.yml
+++ b/FoodFast/app/config/routing.yml
@@ -1,3 +1,7 @@
+app_admin:
+    resource: "@AppAdminBundle/Resources/config/routing.yml"
+    prefix:   /
+
 app_platform:
     resource: "@AppPlatformBundle/Resources/config/routing.yml"
     prefix:   /
