--- a/FoodFast/.gitignore
+++ b/FoodFast/.gitignore
@@ -1,6 +1,7 @@
 /app/config/parameters.yml
 /app/config/parameters_dev.yml
 /app/config/parameters_prod.yml
+/app/config/parameters.yml.dist
 /build/
 /phpunit.xml
 /var/*
