--- a/FoodFast/app/config/parameters.yml.dist
+++ b/FoodFast/app/config/parameters.yml.dist
@@ -4,7 +4,7 @@
 parameters:
     database_host: 127.0.0.1
     database_port: ~
-    database_name: foodfast
+    database_name: fast_food_db
     database_user: root
     database_password: adama
     # You should uncomment this if you want to use pdo_sqlite
