Suppression des fichiers detail_produit, gestion-promo et gestion-produit

--- a/FoodFast/src/App/AdminBundle/Resources/config/routing.yml
+++ b/FoodFast/src/App/AdminBundle/Resources/config/routing.yml
@@ -4,7 +4,11 @@ app_admin_gestionproduit:
 
 app_admin_gestionpromo:
     path:     /gestion_promo
-    defaults: { _controller: AppAdminBundle:Gestion:promo }    
+    defaults: { _controller: AppAdminBundle:Gestion:promo }
+
+app_admin_menu:
+    path:     /menu
+    defaults: { _controller: AppAdminBundle:Gestion:menu }
 
 app_admin_homepage:
     path:     /
