--- a/FoodFast/app/config/config.yml
+++ b/FoodFast/app/config/config.yml
@@ -75,3 +75,12 @@ assetic:
     use_controller: '%kernel.debug%'
     filters:
         cssrewrite: ~
+
+fos_user:
+    db_driver: orm  # Le type de BDD à utiliser, nous utilisons l'ORM Doctrine depuis le début
+    firewall_name: main  # Le nom du firewall derrière lequel on utilisera ces utilisateurs
+    user_class: App\PlatformBundle\Entity\user # La classe de l'entité User que nous utilisons
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
+    
